src/main/resources/static/home.css
*{
    margin: 0;
    padding: 0;
    color: #bee2e2;
    text-decoration: none;
    list-style-type: none;
    font-family: century-gothic, sans-serif;
    font-style: normal;
    font-weight: 400;
}
body{
    background-color: #0c303e;
    /* background: linear-gradient(#0c2e3c,#01161e); */
}
body::-webkit-scrollbar {
    display: none;
}
.nav{
    display: flex;
    position: fixed;
    height: 6vh;
    width: 100vw;
    z-index: 100;
    background-color: transparent;
    transition: background-color 0.2s;
}
.nav.scrolled{
    background-color: #0c2e3c;
}
.AniSekai{
    width: 60vw;
}
.Anisekaiimg{
    height: 10vh;
    position: relative;
    bottom: 2vh;
    right: 1.5vw;
}
.menu{
    width: 40vw;
    position: relative;
    height: 5vh;
    display: flex;
    justify-content: flex-end;
}
.menuicons{
    position: absolute;
    width: 40vw;
    display: flex;
    justify-content: flex-end;
    margin-right: 6%;
    transform: translateX(10%);
    opacity: 0;
    visibility: hidden;
    transition: transform .5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
}
.show{
    transform: translateX(0);
    opacity: 1;
    visibility: visible;
}
.hide {
    transform: translateX(100%);
    opacity: 0;
    visibility: hidden;
}
.openmenu{
    display: flex;
    align-items: center;
    padding-top: 1vh;
    padding-right: 1vh;
}
.openmenu:hover{
    cursor: pointer;
}
.menuicons ul{
    padding-top: 1vh;
    display: flex;
    list-style: none;
}
.menuicons ul li{
    width: 4vw;
}
.slider{
    max-width: 100vw;
    height: 85vh;
    position: relative;
    overflow: hidden;
}
.list{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    display: flex;
    width: max-content;
    transition: 1s;
}
.list img{
    width: 1536px;
    max-width: 100vw;
    height: 100%;
    opacity: 0.8;
    object-fit: cover;
    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.675) 0%, rgba(0, 0, 0, 0.818) 0%, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0) 100%);
}
.buttons{
    display: none;
}
.dots button{
    border: none;
}
.about{
    font-size:x-large;
    width: 30vw;
    position: relative;
    bottom: 50%;
    left: 5%;
}
@media screen and (max-width:770px) {
    .slider{
        height: 400px;
    }
}
.maincontent li{
    height: 50vh;
}
.content{
    margin: 1vw 2vw;
    padding: 4vh 4vh 20vh 4vh;
    overflow: scroll;
    scrollbar-width: none;/* Hide scrollbar for Firefox */
}
.content::-webkit-scrollbar {
    display: none;/* Hide scrollbar for Chrome and Safari*/
}
.genre{
    position: relative;
    top: 4vh;
    padding-left: 4vw;
    font-weight: bolder;
}
.grid-container {
    display: flex;
    gap: 2vh;
}
.grid-container li {
    height: 34vh;
    width: 23vh;
    display: flex;
    z-index: 1;
    overflow: visible;
    transition: filter 0.4s ease-in-out;
    transition: transform 0.6s ease-in-out;
}

.grid-container li img{
    height: 100%;
    width: 23vh;
    border-radius: 3%;
    object-fit: cover;
}
.aboutanime{
    padding: 8%;
    width: 10vw;
    background-color:#124559;
    display: none;
    border-top-right-radius: 3%;
    border-bottom-right-radius: 3%;
    transition: width 1s ease-in-out;
}
.animecontent{
    font-size: small;
    overflow:hidden;
    text-overflow: ellipsis;
    white-space:normal;
    width: 90%;
    height: 50%;
}
.aboutanime h3{
    height: 5vh;
    overflow:hidden;
    text-overflow: ellipsis;
    white-space:nowrap;
}
.aboutmenu{
    width: 2vh;
    height: 2vh;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid #bee2e2;
    padding: 1vh;
    margin: 0 0.5vh;
    border-radius: 50px;
}
.grid-container li img:hover{
    border-top-right-radius: 0%;
    border-bottom-right-radius: 0%;
    cursor: pointer;
    position: relative;
    z-index: 2;
}
.grid-container li:hover .aboutanime{
    cursor: pointer;
    display: inline-block;
    border-left: none;
}
.grid-container li:hover{
    position:relative;
    z-index: 2;
    transform: scale(1.2);
    filter: drop-shadow(0rem 0.2rem 0.2rem #bee2e2);
}
.footer{
    color: #bee2e2;
    height: 50vh;
    background: linear-gradient(#124559,#01161e);
}
.footer2{
    display: flex;
    list-style-type: none;
    justify-content: space-around;
    align-items: center;
    font-size: larger;
}
.footer2 li{
    margin-bottom: 4vh;
}

